<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffff"

    tools:context=".view.MainActivity">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageGroup"
                    android:layout_width="158dp"
                    android:layout_height="137dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/username" />

                <EditText
                    android:id="@+id/groupname"
                    android:layout_width="280dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/shadow_input"
                    android:ems="10"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="280dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/shadow_input"
                    android:ems="10"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    tools:ignore="LabelFor"
                    tools:targetApi="o" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

                <Button
                    android:id="@+id/signIn"
                    android:layout_width="290dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/sign_in" />

                <Button
                    android:id="@+id/signUp"
                    android:layout_width="290dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/sign_up" />

                <ProgressBar
                    android:id="@+id/loginProgress"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
        </LinearLayout>


</LinearLayout>

