<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.pop_up_signup">


 <TextView
     android:id="@+id/textView12"
     android:layout_width="357dp"
     android:layout_height="64dp"
     android:gravity="center"
     android:text="@string/pop_up_tittle"
     android:textColor="#3C3B3B"
     android:textSize="24sp"
     android:textStyle="bold"
     app:fontFamily="sans-serif-smallcaps" />

 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:orientation="horizontal">


  <TextView
      android:id="@+id/textView19"
      android:layout_width="wrap_content"
      android:layout_height="fill_parent"
      android:layout_weight="1"
      android:text="." />

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_weight="1"
      android:orientation="vertical">

   <ImageView
       android:id="@+id/imageStudent"
       android:layout_width="113dp"
       android:layout_height="132dp"
       app:srcCompat="@drawable/student_nonclicked" />

   <TextView
       android:id="@+id/labelStudent"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:text="@string/label_student"
       android:textColor="#ACACAC"
       android:textSize="18sp" />
  </LinearLayout>

  <TextView
      android:id="@+id/textView11"
      android:layout_width="50dp"
      android:layout_height="fill_parent"
      android:layout_gravity="center"
      android:layout_weight="1"
      android:background="#00FFFFFF"
      android:gravity="center"
      android:text="Or"
      android:textColor="#F95959"
      android:textSize="24sp" />

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:orientation="vertical">

   <ImageView
       android:id="@+id/imageTeacher"
       android:layout_width="113dp"
       android:layout_height="132dp"
       android:layout_gravity="end"
       app:srcCompat="@drawable/teachernonclicked" />

   <TextView
       android:id="@+id/labelTeacher"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:text="@string/label_teacher"
       android:textColor="#ACACAC"
       android:textSize="18sp" />
  </LinearLayout>

  <TextView
      android:id="@+id/textView20"
      android:layout_width="wrap_content"
      android:layout_height="fill_parent"
      android:layout_weight="1"
      android:text="." />

 </LinearLayout>

 <ImageView
     android:id="@+id/nextsignup"
     android:layout_width="63dp"
     android:layout_height="50dp"
     android:layout_marginEnd="20dp"
     android:layout_marginTop="10dp"
     android:layout_marginBottom="10dp"

     android:layout_gravity="end"
     android:layout_marginRight="20dp"
     android:layout_marginStart="20dp"
     android:visibility="invisible"
     app:srcCompat="@drawable/right_arrow" />


</LinearLayout>

