<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.signupteacher2"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="90dp"
            android:text="Almost Done"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-smallcaps" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Security Matters"
            android:textColor="#f95959"
            android:textSize="30sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-smallcaps" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/groupname"
            android:layout_width="280dp"
            android:layout_height="36dp"
            android:background="@drawable/shadow_input"
            android:ems="10"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:layout_gravity="center"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textView9"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="280dp"
            android:layout_height="36dp"
            android:background="@drawable/shadow_input"
            android:ems="10"
            android:gravity="center"
            android:importantForAutofill="no"
            android:layout_gravity="center"
            android:inputType="textPassword"
            tools:ignore="LabelFor"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/textView13"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="40dp"
            android:text="confirm password" />

        <EditText
            android:id="@+id/passwordconfirmed"
            android:layout_gravity="center"
            android:layout_width="280dp"
            android:layout_height="36dp"
            android:background="@drawable/shadow_input"
            android:ems="10"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:ignore="LabelFor"
            tools:targetApi="o" />

        <Button
            android:id="@+id/submit"
            android:layout_marginTop="35dp"
            android:layout_width="280dp"
            android:layout_gravity="center"
            android:layout_height="36dp"
            android:background="@drawable/rounded_button"
            android:text="@string/submit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backsignup1Image"
            android:layout_width="60dp"
            android:layout_height="47dp"
            android:layout_marginLeft="15dp"
            app:srcCompat="@drawable/left_arrow" />
    </LinearLayout>


</LinearLayout>